--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,17 +1,81 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:scrollbars="none"
     tools:context="com.sdnu.study.activity.MainActivity" >
 
-    <Button
-        android:onClick="btnClick"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:background="@drawable/bg"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/pro_shenblue"
+            android:gravity="center"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Study Chinese"
+                android:textColor="@color/pro_white"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/everday" />
+
+        <TextView
+            android:id="@+id/tvPinyinbiao"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/cirlcle_item"
+            android:gravity="center"
+            android:onClick="btnClick"
+            android:text="入门"
+            android:layout_marginTop="5dp"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/tvStart"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/cirlcle_item"
+            android:gravity="center"
+            android:text="初级"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/tvPinyinbiao1"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/cirlcle_item"
+            android:gravity="center"
+            android:text="中级"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/cirlcle_item"
+            android:gravity="center"
+            android:text="高级"
+            android:textSize="24sp" />
+    </LinearLayout>
+
+</ScrollView>
