--- a/res/layout/activity_main1.xml
+++ b/res/layout/activity_main1.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg"
@@ -36,7 +37,7 @@
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:layout_gravity="right"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="40dp"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/iv"
         android:background="@drawable/cirlcle_item"
@@ -50,7 +51,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="left"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="40dp"
         android:background="@drawable/cirlcle_item"
         android:layout_below="@+id/iv"
 		android:layout_marginTop="70dp"
@@ -63,7 +64,7 @@
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:layout_gravity="right"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="40dp"
         android:layout_marginTop="55dp"
         android:background="@drawable/cirlcle_item"
         android:gravity="center"
@@ -76,7 +77,7 @@
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:layout_gravity="left"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="50dp"
         android:background="@drawable/cirlcle_item"
         android:gravity="center"
         android:layout_alignParentLeft="true"
