--- a/res/layout/acypinyinitem_layout.xml
+++ b/res/layout/acypinyinitem_layout.xml
@@ -4,4 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <TextView 
+        android:id="@+id/tvMchar"
+        android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:textSize="20sp"
+        android:text=""
+        />
+    <Button 
+        android:id="@+id/btnPlay"
+        android:layout_width="match_parent"
+    	android:layout_height="wrap_content"
+    	android:text="play"
+        />
+    
 </LinearLayout>
