--- a/res/drawable/blue_border.xml
+++ b/res/drawable/blue_border.xml
@@ -8,6 +8,6 @@
     
     <corners android:radius="5dp"/>
     
-    <solid android:color="#ffffff"/>
+    <solid android:color="#ddd"/>
 
 </shape>
