--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,67 +1,88 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="none"
-    tools:context="com.sdnu.study.activity.MainActivity" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg"
+    android:gravity="center_horizontal"
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:id="@+id/llTitlebar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/pro_shenblue"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Better"
+            android:textColor="@color/pro_white"
+            android:textSize="20sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg"
-        android:gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:layout_height="100dp"
+        android:gravity="left"
+        android:orientation="horizontal" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/pro_shenblue"
+        <TextView
+            android:id="@+id/tvSlideMenu"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/cirlcle_item"
             android:gravity="center"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Study Chinese"
-                android:textColor="@color/pro_white"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
+            android:layout_marginLeft="-50dp"
+            android:drawableRight="@drawable/slide_menu"
+            android:textSize="24sp" />
+        <TextView 
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/everday" />
+            android:layout_weight="1"
+            android:paddingLeft="@dimen/_20dp"
+            android:textSize="@dimen/_20sp"
+            android:text="no pains, no gains"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/tvPinyinbiao"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="right"
-            android:layout_marginRight="30dp"
             android:background="@drawable/cirlcle_item"
             android:gravity="center"
-            android:onClick="btnClick"
             android:text="入门"
-            android:layout_marginTop="5dp"
             android:textSize="24sp" />
 
         <TextView
             android:id="@+id/tvStart"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_gravity="left"
-            android:layout_marginLeft="30dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:background="@drawable/cirlcle_item"
             android:gravity="center"
             android:text="初级"
-            android:textSize="30sp" />
+            android:textSize="24sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/tvPinyinbiao1"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="right"
-            android:layout_marginRight="30dp"
+            android:id="@+id/tvMiddle"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:background="@drawable/cirlcle_item"
             android:gravity="center"
             android:text="中级"
@@ -70,12 +91,10 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="left"
-            android:layout_marginLeft="30dp"
             android:background="@drawable/cirlcle_item"
             android:gravity="center"
             android:text="高级"
             android:textSize="24sp" />
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
