--- a/res/layout/yunmubiao.xml
+++ b/res/layout/yunmubiao.xml
@@ -8,12 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:columnWidth="60dp"
+        android:columnWidth="@dimen/_80dp"
         android:gravity="center"
-        android:horizontalSpacing="10dp"
+        android:horizontalSpacing="@dimen/_1dp"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp" >
+        android:verticalSpacing="@dimen/_1dp" >
         </GridView>
 
 </LinearLayout>
