--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,6 +3,25 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-        <dimen name="sliding_menu_ShadowWidth">60dp</dimen>
-	<dimen name="sliding_menu_offset">90dp</dimen>
+    <dimen name="sliding_menu_ShadowWidth">60dp</dimen>
+    <dimen name="sliding_menu_offset">90dp</dimen>
+    <dimen name="_0dp">0dp</dimen>
+    <dimen name="_30dp">30dp</dimen>
+    <dimen name="_30sp">30dp</dimen>
+    <dimen name="_10dp">10dp</dimen>
+    <dimen name="_10sp">10dp</dimen>
+    <dimen name="_5dp">5dp</dimen>
+    <dimen name="_2dp">2dp</dimen>
+    <dimen name="_1dp">1dp</dimen>
+    <dimen name="_4dp">4dp</dimen>
+    <dimen name="_20dp">20dp</dimen>
+    <dimen name="_20sp">20dp</dimen>
+    <dimen name="_60dp">60dp</dimen>
+    <dimen name="_60sp">60dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
+    <dimen name="_50sp">50dp</dimen>
+    <dimen name="_40dp">40dp</dimen>
+    <dimen name="_40sp">40sp</dimen>
+    <dimen name="_80dp">80dp</dimen>
+
 </resources>
