--- a/res/layout/shengmubiao.xml
+++ b/res/layout/shengmubiao.xml
@@ -11,7 +11,7 @@
         android:columnWidth="@dimen/_80dp"
         android:gravity="center"
         android:horizontalSpacing="10dp"
-        android:numColumns="auto_fit"
+        android:numColumns="4"
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp"
         android:background="@color/theme_grey"
