--- a/res/layout/yunmubiao.xml
+++ b/res/layout/yunmubiao.xml
@@ -11,7 +11,7 @@
         android:columnWidth="@dimen/_80dp"
         android:gravity="center"
         android:horizontalSpacing="@dimen/_1dp"
-        android:numColumns="auto_fit"
+        android:numColumns="4"
         android:stretchMode="columnWidth"
         android:verticalSpacing="@dimen/_1dp" >
         </GridView>
