--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -24,5 +24,6 @@
     <dimen name="_40dp">40dp</dimen>
     <dimen name="_40sp">40sp</dimen>
     <dimen name="_80dp">80dp</dimen>
+    <dimen name="_25sp">25sp</dimen>
 
 </resources>
