--- a/res/drawable/selector_btn_back.xml
+++ b/res/drawable/selector_btn_back.xml
@@ -3,4 +3,5 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@drawable/mm_title_back_pressed" />
     <item android:drawable="@drawable/mm_title_back_normal" />
+    <item ></item>
 </selector>
