--- a/res/layout/acychujimain_layout.xml
+++ b/res/layout/acychujimain_layout.xml
@@ -5,6 +5,22 @@
     android:background="@color/bg_color"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_50dp"
+        android:background="@color/pro_shenblue"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/start_class"
+            android:textColor="@color/pro_white"
+            android:textSize="20sp" />
+    </LinearLayout>
+
     <GridView
         android:id="@+id/gvDlgMain"
         android:layout_width="match_parent"
