--- a/res/layout/frmtexercise_layout.xml
+++ b/res/layout/frmtexercise_layout.xml
@@ -11,7 +11,7 @@
         android:layout_marginLeft="@dimen/_20dp"
         android:layout_marginRight="@dimen/_20dp"
         android:layout_marginTop="@dimen/_20dp"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="vertical" >
@@ -23,7 +23,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="10dp"
-            android:textSize="@dimen/_25sp" />
+            android:textSize="@dimen/_18sp" />
 
         <TextView
             android:id="@+id/tvHanSentence"
@@ -33,17 +33,31 @@
             android:gravity="center"
             android:padding="@dimen/_5dp"
             android:text="连词成句"
-            android:textSize="@dimen/_20sp" />
+            android:textSize="@dimen/_18sp" />
 
-        <LinearLayout
+       <!-- <GridLayout
             android:id="@+id/llWords"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="horizontal"
+            android:columnCount="7"
+            android:rowCount="3"
+            android:layout_columnWeight="@dimen/_40dp"
+			android:layout_rowWeight="@dimen/_40dp"
+			android:layout_gravity="center"
              >
-        </LinearLayout>
+        </GridLayout> --> 
+        <com.sdnu.study.myview.FixGridLayout
+            android:id="@+id/llWords"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:gravity="center"
+            >
+            
+        </com.sdnu.study.myview.FixGridLayout>
+        
     </LinearLayout>
 
    <LinearLayout
