--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="_10dp">10dp</dimen>
     <dimen name="_10sp">10dp</dimen>
     <dimen name="_15sp">10dp</dimen>
+    <dimen name="_16sp">10dp</dimen>
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_2dp">2dp</dimen>
     <dimen name="_1dp">1dp</dimen>
@@ -24,6 +25,10 @@
     <dimen name="_40dp">40dp</dimen>
     <dimen name="_40sp">40sp</dimen>
     <dimen name="_80dp">80dp</dimen>
+    <dimen name="_100dp">100dp</dimen>
+    <dimen name="_70dp">70dp</dimen>
     <dimen name="_25sp">25sp</dimen>
+    <dimen name="_18sp">18sp</dimen>
+    
 
 </resources>
