--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -60,16 +60,16 @@
             android:layout_height="100dp"
             android:background="@drawable/cirlcle_item"
             android:gravity="center"
-            android:text="入门"
+            android:text="@string/pinyinbiao"
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/tvStart"
+            android:id="@+id/tvHandWrite"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/cirlcle_item"
             android:gravity="center"
-            android:text="初级"
+            android:text="@string/hand_write"
             android:textSize="24sp" />
     </LinearLayout>
 
@@ -80,12 +80,12 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/tvMiddle"
+            android:id="@+id/tvStart"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/cirlcle_item"
             android:gravity="center"
-            android:text="中级"
+            android:text="@string/short_dialog"
             android:textSize="24sp" />
 
         <TextView
