--- a/res/layout/acylogin_layout.xml
+++ b/res/layout/acylogin_layout.xml
@@ -29,45 +29,44 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="50dp"
+        android:background="@drawable/et_login_border"
+        android:drawableLeft="@drawable/icon_login_user"
+        android:hint="Email"
         android:paddingLeft="2dp"
         android:singleLine="true"
-        android:textColor="@color/theme_font_color"
-        android:hint="Email"
-        android:background="@drawable/et_login_border"
-        android:drawableLeft="@drawable/icon_login_user" />
+        android:textColor="@color/theme_font_color" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginLeft="30dp"
-        android:paddingLeft="2dp"
-        android:textColor="@color/theme_font_color"
-        android:inputType="textPassword"
-       	android:singleLine="true"
-       	android:hint="Password"
         android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/et_login_border"
-        android:drawableLeft="@drawable/icon_login_pw" />
+        android:drawableLeft="@drawable/icon_login_pw"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:paddingLeft="2dp"
+        android:singleLine="true"
+        android:textColor="@color/theme_font_color" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:gravity="center_vertical"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
-         >
+        android:gravity="center_vertical" >
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:background="@drawable/login_btn"
-            android:textColor="@color/theme_font_color"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
-            android:text="@string/login" />
+            android:text="@string/login"
+            android:textColor="@color/theme_font_color" />
 
         <TextView
             android:id="@+id/tv_forgetpw"
@@ -76,6 +75,31 @@
             android:layout_alignParentRight="true"
             android:gravity="center"
             android:text="@string/forget_pw" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center_horizontal" >
+
+        <TextView
+            android:id="@+id/isNewUser"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:text="@string/is_new_user" />
+
+        <TextView
+            android:id="@+id/tvRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_toRightOf="@+id/isNewUser"
+            android:gravity="center"
+            android:textColor="@color/pro_blue"
+            android:text="@string/register" />
     </RelativeLayout>
 
 </LinearLayout>
