--- a/res/layout/acybihuahandwritting_layout.xml
+++ b/res/layout/acybihuahandwritting_layout.xml
@@ -3,13 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <!-- 画板 -->
-    <com.sdnu.study.myview.WrittingView
-        android:id="@+id/writting"
-        android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"	    
-	    android:gravity="center"	    
-	    android:background="#faefefef" >
-	</com.sdnu.study.myview.WrittingView>
+
+
+    <WebView
+        android:id="@+id/wbView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
