--- a/res/layout/frmtbihuatable_item_layout.xml
+++ b/res/layout/frmtbihuatable_item_layout.xml
@@ -7,8 +7,8 @@
     
     <ImageView 
         android:id="@+id/ivBihuaPic"
-        android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
+        android:layout_width="@dimen/_96dp"
+    	android:layout_height="@dimen/_96dp"
     	
         />
 	
